# sisr4rs

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.org  pyproject.toml
hydra/: main.yaml
hydra/adversarial/: default.yaml  unet.yaml
hydra/callbacks/: default.yaml  pretrain_registration.yaml
hydra/datamodule/: default.yaml  s2v1x2.yaml  s2v1x4.yaml  s2v2x2.yaml  s2v2x4.yaml  wsx2.yaml  wsx4.yaml
hydra/experiment/: cross_sensor_paper_s2vx2.yaml  cross_sensor_paper_s2vx4.yaml  cross_sensor_paper_wsx2.yaml  cross_sensor_paper_wsx4.yaml  pretrain_registration_s2vx2.yaml  pretrain_registration_s2vx4.yaml  pretrain_registration_wsx2.yaml  pretrain_registration_wsx4.yaml  profiler.yaml  train_sentinel2_superresolution.yaml
hydra/location/: env.yaml  jz.yaml  trex.yaml
hydra/log_dir/: default.yaml
hydra/loggers/: default.yaml
hydra/losses/: hr_lr_l1_real.yaml  hr_lr_l1_sim.yaml  l1_real.yaml  l1_real_l1lr.yaml  l1_sim.yaml  l1l2lr.yaml  l2_real.yaml  l2_real_lpips.yaml  l2_real_lpips_ws.yaml  l2_real_ws.yaml  l2_sim.yaml  lpips.yaml  lpipsl1lr.yaml  lpipsl2lr.yaml  lpipsl2lratvv-ws.yaml  lpipsl2lratvv.yaml  lpipsl2lravg-ws.yaml  lpipsl2lravg.yaml  pieappl2lr.yaml  sl1_real.yaml  sl1_sim.yaml  study-fixed.yaml  study.yaml  study_lr.yaml
hydra/metrics/: default.yaml  study-s2vx2.yaml  study-s2vx4.yaml  study-ws.yaml  study.yaml  test.yaml
hydra/model/: carn.yaml  esrgan.yaml
hydra/tests/: carn_10.yaml  carn_10_20.yaml  carn_10_20_interp.yaml  carn_20.yaml
hydra/trainer/: default.yaml
hydra/training_module/: default.yaml  sen2venusx2.yaml  sen2venusx4.yaml  worldstrat.yaml
scripts/: analyse_dataset.py  analyse_dataset_by_s2v_site.py  estimate_gradient_stratas.py  estimate_stats_worldstrat.py  find_best_checkpoint.py  gather_results.py  generate_worldstrat_dataset.py  inference_numpy.py  predict_carn_s2.py  profile_dataset.py  profile_inference.py
slurm/: test-jz_a100.slurm  test_trex_a100.slurm  train-jz_a100.slurm  train_trex_a100.slurm  train_trex_a100_ws.slurm  train_trex_dgx_a100.slurm
tests/: test_carn.py  test_dataset.py  test_double_sisr_model.py  test_loss.py  test_loss_helper.py  test_registration.py  test_simulation.py  test_training.py  test_unet.py
torchsisr/: bin_utils.py  carn.py  custom_types.py  dataset.py  discriminator.py  double_sisr_model.py  esrgan.py  fda.py  hydra_utils.py  loss.py  loss_helper.py  patches.py  registration.py  simulation.py  training.py  unet.py
